[tool.poetry]
name = "oasbuilder"
version = "0.1.0"
description = "OpenAPI Specification generator by using JSON stored via mitmproxy-elasticagent"
authors = ["hrfmmr <i@hrfmmr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--showlocals", "--verbose"]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]
